# lightsourceestimation

./: .gitignore  README.md
src/: CMakeLists.txt  main.cpp  tree.cpp  tree.hpp  tree_structure.hpp
